@@ -19,7 +19,7 @@ Changes :
    2-26-99 Added TAB_SLOTS, tab_array, add_tab() and get_tab() (Lalo)
 **********************************************
 **********************************************/
-#define MICQ_VERSION "0.4.6 now with word wrapping to fit the screen.\t"
+#define MICQ_VERSION "0.4.6p1 in Dedication to Matthew D. Smith.\t"
 
 #include "config.h"
 #include "datatype.h"
